--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -183,3 +183,25 @@ body {
   text-align: center;
   margin-bottom: 0.5rem;
 }
+.page-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start; 
+  align-items: center;
+  height: calc(100vh - 60px); 
+  text-align: center;
+  color: white;
+  padding-top: 100px; 
+}
+
+
+.page-title {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.page-description {
+  font-size: 1.2rem;
+  color: #ddd;
+}
