--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -20,10 +20,21 @@ a:hover {
   color: #535bf2;
 }
 
+/* make root fill viewport */
+html, #root {
+  height: 100%;
+}
+
 body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+
+  /* full-screen background */
+  background-image: url('/background.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 h1 {
