--- a/Frontend/src/components/buttons.css
+++ b/Frontend/src/components/buttons.css
@@ -1,11 +1,12 @@
 .filter-sort-search {
-  width: 100px;
+  width: 120px;
   background-color: blue;
   color: white;
   border: none;
+  font-weight: bolder;
 }
 
 .filter-sort-search:hover {
-  background-color: white; /* צבע כחול למשל */
+  background-color: white;
   color: blue;
 }
