Adding implementation of the forum + Updating requests to closed/in progress

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -493,6 +493,14 @@ body {
   font-weight: bold;
 }
 
+.tech-view-request-closed-msg {
+  color: red;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 16px;
+}
+
+
 /* =====================
    Tech-Sup Pages END
 ===================== */
