Adding a loading spinner on the client side (for viewing conversation history) + adjusting the CSS design of the "create new request" window.

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -168,6 +168,7 @@ body {
    Tech-Sup Pages START
 ===================== */
 
+
 .btn-blue-tech {
   background-color: #1e90ff; /* DodgerBlue */
   color: white;
@@ -360,19 +361,25 @@ body {
 }
 
 .tech-form-container {
-  background: white;
-  padding: 10px 20px; 
-  border-radius: 8px;
+  background: #fff;
+  padding: 30px 20px; 
+  border-radius: 10px;
   max-width: 600px;
   margin: 17px auto 0;
   color: black; 
-  font-family: "Segoe UI", sans-serif;
-  min-height: 180px; 
+  font-family: "Trebuchet MS", sans-serif;
+  min-height: 180px;
+  border: 2px solid black;
+  min-height: 300px; 
 }
 
-.tech-form-container h1 {
+.tech-form-container-title {
+  color: #333;
   text-align: center;
-  color: black;
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 2%;
+  margin-top: 2%;
 }
 
 .tech-form-container form {
@@ -404,6 +411,8 @@ body {
   margin-top: 15px;
   display: flex;
   gap: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
 #tech-filePreview img {
