--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -133,6 +133,20 @@ body {
   cursor: pointer;
   transition: background 0.2s;
 }
+
+.searchSaleHistorybtn{
+  margin-top: 24px;
+  margin-left: 30px;
+  padding: 12px 32px;
+  background: #00897b;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  font-size: 1.1em;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+
 .salesBtn:hover{
   background: #1976d2;
 }
