--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -138,7 +138,7 @@ body {
   transition: background 0.2s;
 }
 
-.searchSaleHistorybtn{
+.searchSaleHistorybtn, .SalesForecastbtn{
   margin-top: 24px;
   margin-left: 30px;
   padding: 12px 32px;
