--- a/Frontend/src/components/buttons.css
+++ b/Frontend/src/components/buttons.css
@@ -1,12 +1,19 @@
 .filter-sort-search {
-  width: 120px;
-  background-color: blue;
-  color: white;
+  background: linear-gradient(to right, #b2fefa, #ffffff);
+  color: black;
   border: none;
-  font-weight: bolder;
+  padding: 12px 24px;
+  border-radius: 16px;
+  font-size: 1rem;
+  font-weight: bold;
+  box-shadow: 0 0 10px rgba(32, 178, 170, 0.6);
+  transition: background-color 0.3s, transform 0.3s;
+  width: 160px;
 }
 
 .filter-sort-search:hover {
-  background-color: white;
-  color: blue;
+  background: linear-gradient(to right, #1abc9c, #b2fefa);
+  color: white;
+  transform: scale(1.05);
+  box-shadow: 0 0 10px rgba(32, 178, 170, 0.6);
 }
