--- a/Frontend/src/components/buttons.css
+++ b/Frontend/src/components/buttons.css
@@ -1,10 +1,10 @@
 .filter-sort-search {
-  background: linear-gradient(to right, #b2fefa, #ffffff);
+  background: linear-gradient(to right, #1abc9c, #b2fefa);
   color: black;
   border: none;
   padding: 12px 24px;
   border-radius: 16px;
-  font-size: 1rem;
+  font-size: 13px;
   font-weight: bold;
   box-shadow: 0 0 10px rgba(32, 178, 170, 0.6);
   transition: background-color 0.3s, transform 0.3s;
@@ -12,7 +12,6 @@
 }
 
 .filter-sort-search:hover {
-  background: linear-gradient(to right, #1abc9c, #b2fefa);
   color: white;
   transform: scale(1.05);
   box-shadow: 0 0 10px rgba(32, 178, 170, 0.6);
