--- a/Frontend/src/pages/ProductsPage.css
+++ b/Frontend/src/pages/ProductsPage.css
@@ -31,3 +31,45 @@
   margin: 4rem auto;
   max-width: 90%;
 }
+
+.no-results-message {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.8rem;
+  font-weight: bold;
+  background: linear-gradient(to right, #1abc9c, #b2fefa);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+  text-shadow: 0 0 10px rgba(32, 178, 170, 0.6);
+}
+
+.add-button {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  z-index: 9999;
+  background: linear-gradient(to right, #1abc9c, #b2fefa);
+  color: white;
+  border: none;
+  font-size: 5rem;
+  font-weight: lighter;
+  transition: background-color 0.3s, transform 0.3s;
+  padding-top: 0;
+  box-shadow: 0 0 10px rgba(32, 178, 170, 0.6);
+  width: 5rem;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px;
+  vertical-align: middle !important;
+}
+
+.add-button:hover {
+  color: black;
+  transform: scale(1.05);
+  box-shadow: 0 0 10px rgba(32, 178, 170, 0.6);
+}
